<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".Activity.Signup">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="@dimen/_30dp"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/customer_registration"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/signup_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/fullname"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10dp"
                    android:textAlignment="textStart" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/_10dp"
                    android:textAlignment="textStart" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange" />

                <TextView
                    android:id="@+id/signup_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:padding="@dimen/_10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:paddingLeft="@dimen/_10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange" />

                <TextView
                    android:id="@+id/signup_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Country"
                    android:padding="@dimen/_10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/signup_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="State"
                    android:padding="@dimen/_10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/signup_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="City"
                    android:padding="@dimen/_10dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange" />

                <EditText
                    android:id="@+id/signup_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/orange" />

            </LinearLayout>

            <Button
                android:id="@+id/signup_btn"
                style="@style/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:text="@string/all_ready_have_an_account"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/signup_started"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/get_login"
                    android:textColor="@color/pink" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    </LinearLayout>

</LinearLayout>