<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".Activity.Login">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/loginrefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_30dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/welcome"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sp" />

        <EditText
            android:id="@+id/login_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_30dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/nexa_bold"
            android:hint="@string/email"
            android:inputType="textPersonName|textEmailAddress"
            android:paddingLeft="@dimen/_10dp" />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/nexa_bold"
            android:hint="@string/password"
            android:inputType="textPersonName|textPassword"
            android:paddingLeft="@dimen/_10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:text="Remember Me" />

            <TextView
                android:id="@+id/login_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/forget_pwd"
                android:textAlignment="textEnd"
                android:textColor="@color/pink" />
        </LinearLayout>

        <Button
            android:id="@+id/loginbutton"
            style="@style/btn_style"
            android:layout_width="200dp"
            android:layout_height="@dimen/_50dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:gravity="center"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_30dp"
            android:layout_marginRight="@dimen/_30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/no_account"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/login_getstarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get_started"
                android:textAlignment="textStart"
                android:textColor="@color/pink" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="@dimen/_20dp"
            android:background="#fff"
            android:drawableStart="@drawable/google"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="Sign In With Google"
            android:textAllCaps="false"
            android:textSize="16sp"/>


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_gravity="center_horizontal" />

        <!--        <ImageView-->
<!--            android:id="@+id/imageView4"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="@dimen/_50dp"-->
<!--            android:layout_marginLeft="@dimen/_30dp"-->
<!--            android:layout_marginRight="@dimen/_30dp"-->
<!--            app:srcCompat="@drawable/or" />-->

    </LinearLayout>

        </LinearLayout>

    </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>