<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">


    <FrameLayout
        android:id="@+id/container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

    </FrameLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="176dp"
                    android:layout_height="158dp"
                    android:layout_gravity="left"
                    android:contentDescription="@string/images"
                    app:srcCompat="@drawable/front1" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:contentDescription="@string/images"
                    app:srcCompat="@drawable/spoon1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="100dp"
                    android:contentDescription="@string/images"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/home_chef"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/best_foot"
                    android:textAlignment="center"
                    android:textSize="@dimen/_20sp" />

                <Button
                    android:id="@+id/login_login_btn"
                    style="@style/btn_style"
                    android:text="@string/login" />

                <View
                    android:id="@+id/loginview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/sign_sign_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_50dp"
                    android:layout_marginEnd="@dimen/_50dp"
                    android:layout_marginBottom="@dimen/_50dp"
                    android:background="@drawable/yellow_border"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/get_started"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <View
                    android:id="@+id/signupview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="213dp"
                        android:layout_height="132dp"
                        android:layout_gravity="left"
                        android:contentDescription="@string/images"
                        app:srcCompat="@drawable/folk1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>